--- a/client/src/app/errors/server-error/server-error.component.html
+++ b/client/src/app/errors/server-error/server-error.component.html
@@ -11,5 +11,5 @@
         <li>Reproduce the error in postman- if we see the same response then the issue is not with Angular(not on the client)</li>
     </ol>
 <p> Following is the stack trace- this is where you should start investigating</p>
-<code class="mt-5" style="background-color: whitesmoke;">{{error.details}}</code>
+<code class="mt-5" style="background-color: whitesmoke;">{{error}}</code>
 </ng-container>
